# hackathon-orca

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: agno-researcher.md  ai-engineer.md  demo-coach.md  finops.md  hackathon-judge.md
.claude/commands/: council.md
.claude/commands/opsx/: sync.md  verify.md
.claude/skills/council/: SKILL.md
.claude/skills/openspec-sync/: SKILL.md
.claude/skills/openspec-verify/: SKILL.md
openspec/: config.yaml
openspec/changes/consumer-v0/: design.md  proposal.md  tasks.md
openspec/changes/travel-agent/: design.md  proposal.md  tasks.md
openspec/specs/booking-tools/: spec.md
openspec/specs/orca-integration/: spec.md
openspec/specs/travel-agent/: spec.md
src/hackathon/: __init__.py
src/hackathon-18march-boilerplate/: package-lock.json
src/hackathon-18march-boilerplate/consumer/: main.py
src/hackathon-18march-boilerplate/provider/: main.py  requirements.txt
src/hackathon/agents/: __init__.py  assistant_agent.py  research_agent.py
src/hackathon/api/: app.py
src/hackathon/api/routes/: agents.py  health.py
src/hackathon/infrastructure/config/: __init__.py  settings.py
src/hiking-provider/: main.py
