[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackathon"
version = "0.1.0"
description = "Hackathon project with Agno agents and FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hackathon"]

[tool.ruff]
line-length = 100
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RET", "W"]
ignore = ["E501", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
